syntax = "proto3";

import "tendermint.proto";

package types;

message ValNode {
    bytes pubKey = 1;
    int64 power  = 2;
}

message ValNodes {
    repeated ValNode nodes = 1;
}

message ValNodeAction {
    oneof value {
        ValNode             node      = 1;
        TendermintBlockInfo blockInfo = 2;
    }
    int32 Ty = 3;
}